# frappe-mcp-python

./: README.md  client.py  lowlevel.py  main.py  main2.py  pyproject.toml
Frappe/: client.py
db/: client.py
legacy/: lowlevel.py  main.py
tests/: db_login.py  frappe_login.py  test_db.py  test_frappe_doc.py
tools/: __init__.py  get_document.py  get_employee.py  query_database.py
