[project]
name = "frappe-mcp-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.28.1",
    "mariadb>=1.1.12",
    "mcp[cli]>=1.6.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sqlparse>=0.5.3",
    "tabulate>=0.9.0",
]
